--- a/pages/6559.html
+++ b/pages/6559.html
@@ -906,21 +906,21 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> a <em>vacuum state</em> is supposed to be a <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> that expresses the absence of any <a class='existingWikiWord' href='/nlab/show/particle'>particle</a> excitations of the fields.</p>
 
-<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> the <em><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></em> for a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> is the standard <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a>. On general <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic spacetimes</a> there are always <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard states</a>, and they do play the role of the vacuum state in the construction of <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a>, see at <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>locally covariant perturbative AQFT</a></em>. Notably the choice of such a Hadamard state fixes the <em><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></em>, hence the <a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> and thus the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> away from coinciding interaction points (the <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of these distributions</a> to coinciding interaction points is the process of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>).</p>
+<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> the <em><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></em> for a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> is the standard <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a>. On general <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic spacetimes</a> there are always <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard states</a>, and they do play the role of the vacuum state in the construction of <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a>, see at <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>locally covariant perturbative AQFT</a></em>. Notably the choice of such a Hadamard state fixes the <em><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></em>, hence the <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> and thus the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> away from coinciding interaction points (the <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of these distributions</a> to coinciding interaction points is the process of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>).</p>
 
 <p>However, since on a general <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>globally hyperbolic spacetime</a> there is no globally well-defined concept of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>, there is in general no concept of vacuum state. But under good conditions (such as existence of suitable <a class='existingWikiWord' href='/nlab/show/timelike+curve'>timelike</a> <a class='existingWikiWord' href='/nlab/show/Killing+vector+field'>Killing vectors</a>) one may identify Hadamard states which deserve to be thought of as vacuum states (<a href='vacuum+state#BrumFredenhagen13'>Brum-Fredenhagen 13</a>).</p>
 
 <h3 id='in_string_theory'>In string theory</h3>
 
-<p>As mentioned <a href='#InQuantumFieldTheory'>above</a>, in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a choice of <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> (more generally: <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a>) defines the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a>, hence the <a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> and thus the perturbative <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> away from coinciding interaction points and <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extended</a> to coincing interaction points via a choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>.</p>
+<p>As mentioned <a href='#InQuantumFieldTheory'>above</a>, in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a choice of <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> (more generally: <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a>) defines the <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a>, hence the <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a> of <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> and thus the perturbative <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> away from coinciding interaction points and <a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extended</a> to coincing interaction points via a choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>.</p>
 
-<p>Now <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> is not a <a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local field theory</a>, in which the <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> is derived (up to choice of <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> and <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>) from a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian density</a>, but is <em>defined</em> by <em>declaring</em> the <a class='existingWikiWord' href='/nlab/show/string+theory'>string perturbation series</a> (obtained by other means, namely by <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFT</a> <a class='existingWikiWord' href='/nlab/show/correlator'>correlators</a>) to be the <a class='existingWikiWord' href='/nlab/show/S-matrix'>scattering matrix</a>.</p>
+<p>Now <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> is not a <a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local field theory</a>, in which the <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> is derived (up to choice of <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> and <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>) from a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian density</a>, but is <em>defined</em> by <em>declaring</em> the <a class='existingWikiWord' href='/nlab/show/string+scattering+amplitude'>string perturbation series</a> (obtained by other means, namely by <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFT</a> <a class='existingWikiWord' href='/nlab/show/correlator'>correlators</a>) to be the <a class='existingWikiWord' href='/nlab/show/S-matrix'>scattering matrix</a>.</p>
 
-<p>Hence while a vacuum in <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> cannot be a <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> as in <a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local field theory</a> (since there is a priori just no <a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> that it could be a <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> on), it makes sense to define a vacuum of perturvative string theory to be whatever data it takes to define the stringy <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, namely the <a class='existingWikiWord' href='/nlab/show/string+theory'>string perturbation series</a>. This datum is that of a <a class='existingWikiWord' href='/nlab/show/2d+SCFT'>2d SCFT</a> (of <a class='existingWikiWord' href='/nlab/show/central+charge'>central charge</a> 15).</p>
+<p>Hence while a vacuum in <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> cannot be a <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> as in <a class='existingWikiWord' href='/nlab/show/local+quantum+field+theory'>local field theory</a> (since there is a priori just no <a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> that it could be a <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> on), it makes sense to define a vacuum of perturvative string theory to be whatever data it takes to define the stringy <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, namely the <a class='existingWikiWord' href='/nlab/show/string+scattering+amplitude'>string perturbation series</a>. This datum is that of a <a class='existingWikiWord' href='/nlab/show/2d+SCFT'>2d SCFT</a> (of <a class='existingWikiWord' href='/nlab/show/central+charge'>central charge</a> 15).</p>
 
 <p>Hence in <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> the vacua of the <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective background QFT</a> are at the same time identified with certain 2-dimensional <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a>s – which for “geometric vacua” are the <a class='existingWikiWord' href='/nlab/show/string'>string</a> <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> which have the given <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective QFT</a> as their <a class='existingWikiWord' href='/nlab/show/second+quantization'>second quantization</a>.</p>
 
-<p>Perturbative string theory is <em>defined</em> as the <a class='existingWikiWord' href='/nlab/show/string+theory'>string perturbation series</a> of these <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> about these vacua.</p>
+<p>Perturbative string theory is <em>defined</em> as the <a class='existingWikiWord' href='/nlab/show/string+scattering+amplitude'>string perturbation series</a> of these <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-models</a> about these vacua.</p>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of these vacua – which is hardly understood – has come to be called the <em><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></em> .</p>
 
@@ -932,19 +932,31 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/false+vacuum'>false vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a>, <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitude</a>, <a class='existingWikiWord' href='/nlab/show/quantum+fluctuation'>vacuum fluctuation</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+energy'>vacuum energy</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a>, <a class='existingWikiWord' href='/nlab/show/quantum+fluctuation'>vacuum fluctuation</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitude</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/false+vacuum'>false vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a>, <a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/theta+vacuum'>theta vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></p>
 </li>
 
 <li>
@@ -970,14 +982,6 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacuum</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></p>
-</li>
-
-<li>
 <p><a href='http://ncatlab.org/nlab/show/string+theory+FAQ#WhatDoesItMeanToSayStringTheoryHasALandscapeOfSolutions'>string theory FAQ – What does it mean to say that string theory has a “landscape of solutions”?</a></p>
 </li>
 </ul>
@@ -987,14 +991,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 17:06:22 
+  Revised on January 12, 2018 19:32:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vacuum/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vacuum/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
