--- a/pages/18903.html
+++ b/pages/18903.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,47 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/instanton+in+QCD'>instanton sea</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/instanton+in+QCD'>instanton sea</a></p>
+</li>
+
+<li>
+<p><strong><a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>, <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a>, <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitude</a>, <a class='existingWikiWord' href='/nlab/show/quantum+fluctuation'>vacuum fluctuation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+energy'>vacuum energy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/false+vacuum'>false vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a>, <a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/theta+vacuum'>theta vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></p>
+</li>
+</ul>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -349,14 +389,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January  3, 2018 16:12:13 
+  Revised on January 12, 2018 19:29:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/theta+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/theta+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/theta+vacuum/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/theta+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/theta+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
