--- a/pages/6879.html
+++ b/pages/6879.html
@@ -910,15 +910,41 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a>, <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation value</a>, <a class='existingWikiWord' href='/nlab/show/vacuum+amplitude'>vacuum amplitude</a>, <a class='existingWikiWord' href='/nlab/show/quantum+fluctuation'>vacuum fluctuation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+energy'>vacuum energy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/false+vacuum'>false vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a>, <a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/theta+vacuum'>theta vacuum</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacuum</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/landscape+of+string+theory+vacua'>landscape of string theory vacua</a></p>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -943,14 +969,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 10, 2014 08:10:05 
+  Revised on January 12, 2018 19:27:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (31.55.40.250)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
