--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1346,16 +1346,28 @@ margin-left: 0em;
 <li id='Hollands07'><a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, <em>Renormalized Quantum Yang-Mills Fields in Curved Spacetime</em>, Rev. Math. Phys. 20:1033-1172, 2008 (<a href='https://arxiv.org/abs/0705.3340'>arXiv:0705.3340</a>)</li>
 </ul>
 
-<p>Discussion of the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> and <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a>) includes</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>weak adiabatic limit</a> of QED was established in</p>
 
 <ul>
-<li>
-<p>Daniel Kapec, Malcolm Perry, Ana-Maria Raclariu, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Infrared Divergences in QED, Revisited</em>, Phys. Rev. D 96, 085002 (2017) (<a href='https://arxiv.org/abs/1705.04311'>arXiv:1705.04311</a>)</p>
+<li id='BlanchardSeneor75'>
+<p>P. Blanchard and R. Seneor, <em>Green’s functions for theories with massless particles (in perturbation theory)</em>, Ann. Inst. H. Poincaré Sec. A 23 (2), 147–209 (1975) (<a href='http://www.numdam.org/item?id=AIHPA_1975__23_2_147_0'>Numdam</a>)</p>
 </li>
 
 <li id='Duch17'>
 <p><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</p>
 </li>
+</ul>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of algebras of observables</a> and hence the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>algebraic adiabatic limit</a> was worked out in</p>
+
+<ul>
+<li id='DuetschFredenhagen98'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>A local (perturbative) construction of observables in gauge theories: the example of QED</em>, Commun. Math. Phys. 203 (1999) 71-105 (<a href='https://arxiv.org/abs/hep-th/9807078'>arXiv:hep-th/9807078</a>)</li>
+</ul>
+
+<p>Further discussion of the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> and <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a>) includes</p>
+
+<ul>
+<li>Daniel Kapec, Malcolm Perry, Ana-Maria Raclariu, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Infrared Divergences in QED, Revisited</em>, Phys. Rev. D 96, 085002 (2017) (<a href='https://arxiv.org/abs/1705.04311'>arXiv:1705.04311</a>)</li>
 </ul>
 
 <h3 id='review'>Review</h3>
@@ -1407,14 +1419,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 12, 2018 16:42:47 
+  Revised on January 13, 2018 09:34:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
