--- a/pages/17988.html
+++ b/pages/17988.html
@@ -703,19 +703,25 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li id='BiemansPlataniaSaueressig17'>Jorn Biemans, Alessia Platania, Frank Saueressig, <em>Renormalization group fixed points of foliated gravity-matter systems</em> (<a href='https://arxiv.org/abs/1702.06539'>arXiv:1702.06539</a>)</li>
+<li>
+<p>Roberto Percacci, <em>Asymptotic Safety FAQs</em> (<a href='http://www.percacci.it/roberto/physics/as/faq.html'>web</a>)</p>
+</li>
+
+<li id='BiemansPlataniaSaueressig17'>
+<p>Jorn Biemans, Alessia Platania, Frank Saueressig, <em>Renormalization group fixed points of foliated gravity-matter systems</em> (<a href='https://arxiv.org/abs/1702.06539'>arXiv:1702.06539</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on January  4, 2018 04:14:42 
+  Revised on January 14, 2018 07:53:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
