--- a/pages/4900.html
+++ b/pages/4900.html
@@ -311,7 +311,7 @@ margin-left: 0em;
     <p><strong>Cahiers de Topologie et Géométrie Différentielle Catégoriques</strong> (often referred simply as Cahiers) is one of the main journals primarily dedicated to category theory (see also <a class='existingWikiWord' href='/nlab/show/Theory+and+Applications+of+Categories'>TAC</a>). It was created by the late <a class='existingWikiWord' href='/nlab/show/Charles+Ehresmann'>Charles Ehresmann</a> in 1958 and is presently edited by <a class='existingWikiWord' href='/nlab/show/Andree+Ehresmann'>Andrée Charles Ehresmann</a>.</p>
 
 <ul>
-<li>the official site of the journal: <a href='http://ehres.pagesperso-orange.fr/Cahiers/Ctgdc.htm'>English top page</a></li>
+<li>the official site of the journal: <a href='http://cahierstgdc.com/'>CahiersTGDC</a></li>
 
 <li>free issues 1966-2008 at <a href='http://www.numdam.org/numdam-bin/feuilleter?j=CTGDC&amp;sl=0'>numdam</a></li>
 
@@ -325,14 +325,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 10, 2014 15:06:26 
+  Revised on January 14, 2018 19:56:08 
   by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (129.127.252.10)
+  (129.127.5.20)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cahiers" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cahiers/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Cahiers" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cahiers" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cahiers" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cahiers/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Cahiers" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cahiers" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
