--- a/pages/18644.html
+++ b/pages/18644.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -686,7 +686,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>pAQFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/infraparticle'>infraparticle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
 </li>
 
 <li>
@@ -694,7 +698,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class='newWikiWord'>infraparticle<a href='/nlab/new/infraparticle'>?</a></span></p>
+<p><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>pAQFT</a></p>
 </li>
 </ul>
 
@@ -793,14 +797,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2018 18:56:56 
+  Revised on January 15, 2018 07:58:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
