--- a/pages/18933.html
+++ b/pages/18933.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -663,12 +663,22 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#InQCD'>In QCD</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> for an <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a> is sometimes called, for emphasis, an <em>interacting vacuum</em>.</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> one starts with a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> and a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> (or <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard vacuum state</a>) on that, the “free vacuum”; and then finds, perturbatively, the <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra of observables</a>. The free vacuum is typically still a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state</a> on the <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra of observables</a>, but it is in general no longer a <em>vacuum</em> state with respect to the interacting field algebra. To highlight the difference to an actual vacuum state for the interacting field algebra, one speaks of the <em>interacting vacuum</em>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> one starts with a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> and a <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> (or <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard vacuum state</a>) on that, the “free vacuum”; and then finds, perturbatively, the <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra of observables</a>. The free vacuum is typically still a <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state</a> on the <a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra of observables</a>, but it is in general no longer a <em>vacuum</em> state with respect to the interacting field algebra. To highlight the difference to an actual vacuum state for the interacting field algebra, one speaks of the <em>interacting vacuum</em> (e.g. <a href='#Rafelski90'>Rafelski 90</a>).</p>
+
+<p>Issues related to the <a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a> and <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergences</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a> are argued to be related to the need to pass to the correct interacting vacuum (<a href='#Duch17'>Duch 17, p. 113-114</a>).</p>
+
+<p>This is understood to some extent in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> but remains a major open problem in <a class='existingWikiWord' href='/nlab/show/QCD'>quantum chromodynamics</a> (<a href='#InQCD'>below</a>).</p>
+
+<h2 id='examples'>Examples</h2>
+
+<h3 id='InQCD'>In QCD</h3>
+
+<p>There are arguments that the phenomenon of <a class='existingWikiWord' href='/nlab/show/confinement'>confinement</a> in <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> will be explained by finding the properly interacting vacuum of the perturbative theory (<a href='#Rafelski90'>Rafelski 90, around pages 12-16</a>). Possibly this is a “<a class='existingWikiWord' href='/nlab/show/theta+vacuum'>theta-vacuum</a>” reflecting <a class='existingWikiWord' href='/nlab/show/instanton+in+QCD'>QCD instanton</a> contributions (<a href='#SchaeferShuryak98'>Schäfer-Shuryak 98, section III D</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -706,6 +716,22 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='Rafelski90'>
+<p><a class='existingWikiWord' href='/nlab/show/Johann+Rafelski'>Johann Rafelski</a>, <em>Vacuum structure – An Essay</em>, in pages 1-29 of H. Fried, Berndt Müller (eds.) <em>Vacuum Structure in Intense Fields</em>, Plenum Press 1990 (<a href='https://books.google.de/books?id=5uXcBwAAQBAJ&amp;pg=PA14&amp;lpg=PA14&amp;dq=confinement+%22interacting+vacuum%22&amp;source=bl&amp;ots=xPGYJ-JOc-&amp;sig=AoYbqWQeNRMg6hMSRZjJ3nzq8B0&amp;hl=en&amp;sa=X&amp;ved=0ahUKEwjIgK68-tnYAhVCESwKHThMDykQ6AEIKTAA#v=onepage&amp;q=confinement%20%22interacting%20vacuum%22&amp;f=false'>GBooks</a>)</p>
+</li>
+
+<li id='SchaeferShuryak98'>
+<p><a class='existingWikiWord' href='/nlab/show/Thomas+Schaefer'>Thomas Schaefer</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Shuryak'>Edward Shuryak</a>, <em>Instantons in QCD</em>, Rev. Mod. Phys.70:323-426,1998 (<a href='http://arxiv.org/abs/hep-ph/9610451'>arXiv:hep-ph/9610451</a>)</p>
+</li>
+
+<li id='Duch17'>
+<p><a class='existingWikiWord' href='/nlab/show/Pawe%C5%82+Duch'>Paweł Duch</a>, <em>Massless fields and adiabatic limit in quantum field theory</em> (<a href='https://arxiv.org/abs/1709.09907'>arXiv:1709.09907</a>)</p>
+</li>
+</ul>
+
 <p>
 </p>
 
@@ -715,14 +741,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 12, 2018 19:31:59 
+  Revised on January 15, 2018 07:54:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/interacting+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+vacuum/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/interacting+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
